# OpenGLTestingGrounds

./: .gitignore  CMakeLists.txt
shaders/: fragment-shader.glsl  vertex-shader.glsl
src/: camera.cpp  entity.cpp  glad.c  main.cpp  shader.cpp
src/include/: camera.hpp  entity.hpp  shader.h
